2003-06-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/alpha.test: Really run $MAKE.  Augment to test
	subdirectories, and check-news report.
	* tests/alpha2.test: New file.  Bug report from Akim Demaille.
	* tests/gnits2.test: Make sure README-alpha is not distributed.
	* tests/Makefile.am (TESTS): Add alpha2.test.
	* automake.in (handle_minor_options): Distribute README-alpha
	using push_dist_common, not require_file_with_macro.

2003-06-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Configure_ac.pm
	(search_configure_ac, find_configure_ac): Rename as ...
	(find_configure_ac, require_configure_ac): ... these.
	* aclocal.in (scan_configure): Adjust call to require_configure_ac.
	* automake.in (scan_autoconf_files): Likewise.
	Suggested by Tim Van Holder.

	* alocal.in: Use Automake::Configure_ac.
	($configure_ac): Delete.
	(scan_configure): Adjust use of find_configure_ac;
	* automake.in: Use Automake::Configure_ac.
	($configure_ac): Delete.
	(scan_autoconf_files): Adjust use of find_configure_ac;
	* lib/Automake/Configure_ac.pm: New file.
	* lib/Automake/General.pm (find_configure_ac): Delete.  Now
	replaced by Automake::Configure_ac::search_configure_ac.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Configure_ac.pm.
	* lib/Automake/Variable.pm: Use Automake::Configure_ac.
	(require_variables): Adjust use of $configure_ac.

2003-06-02  Akim Demaille  <akim@epita.fr>

	* lib/am/texi-vers.am, lib/am/subdirs.am, lib/am/scripts.am,
	* lib/am/remake-hdr.am, lib/am/python.am, lib/am/progs.am,
	* lib/am/program.am, lib/am/multilib.am, lib/am/mans.am,
	* lib/am/mans-vars.am, lib/am/ltlibrary.am, lib/am/ltlib.am,
	* lib/am/lisp.am, lib/am/libtool.am, lib/am/library.am,
	* lib/am/lang-compile.am, lib/am/java.am, lib/am/header.am,
	* lib/am/header-vars.am, lib/am/footer.am, lib/am/depend.am,
	* lib/am/dejagnu.am, lib/am/data.am, lib/am/compile.am,
	* lib/am/clean.am, lib/am/clean-hdr.am, lib/am/check.am,