@@ -19,7 +19,8 @@
 # Boston, MA 02111-1307, USA.
 
 # Actual test of ansi2knr functionality.  Relies on existence
-# of working gcc.
+# of working gcc.  Same as ansi3.test, but with AUTOMAKE_OPTIONS
+# defined in configure.in.
 
 required=gcc
 . ./defs || exit 1
@@ -27,17 +28,15 @@ required=gcc
 set -e
 
 cat > configure.in << 'END'
-AC_INIT(hello.c)
-AM_INIT_AUTOMAKE(hello,0.23)
+AC_INIT([hello], [0.24])
+AM_INIT_AUTOMAKE([ansi2knr no-dependencies])
 AC_PROG_CC
 AM_C_PROTOTYPES
-AC_OUTPUT(Makefile)
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
 END
 
-cat > Makefile.am << 'END'
-AUTOMAKE_OPTIONS = ansi2knr no-dependencies
-bin_PROGRAMS = hello
-END
+echo 'bin_PROGRAMS = hello' > Makefile.am
 
 cat > hello.c << 'END'
 #include <stdio.h>
@@ -59,7 +58,7 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a 2>stderr
 cat stderr
-grep 'Makefile.am:1:.*ansi2knr\.c' stderr
+grep 'configure.in:2:.*ansi2knr\.1' stderr
 CC='gcc' ./configure
 ANSI2KNR=./ansi2knr U=_ $MAKE -e
 ./hello
