@@ -1,5 +1,13 @@
 2003-06-04  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (process_option_list): Record the location
+	of ansi2knr's definition.
+	(handle_compile): Use it.
+	* tests/ansi3.test: Make sure the location appears correctly.
+	Update to use set -e.
+	* tests/ansi3b.test: New file.
+	* tests/Makefile.am (TESTS): Add ansi3b.test.
+
 	* tests/alpha.test: Really run $MAKE.  Augment to test
 	subdirectories, and check-news report.
 	* tests/alpha2.test: New file.  Bug report from Akim Demaille.
